# isitprime

./: .gitignore  database.py  pyproject.toml  quiz_app.py  requirements.txt
